--- a/e-commerce-gateway/pom.xml
+++ b/e-commerce-gateway/pom.xml
@@ -38,6 +38,17 @@
             <artifactId>e-commerce-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- zipkin + sleuth-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+        <!-- kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
     <!--
