--- a/e-commerce-gateway/src/main/resources/bootstrap.yml
+++ b/e-commerce-gateway/src/main/resources/bootstrap.yml
@@ -23,6 +23,19 @@ spring:
 #          uri: 127.0.0.1:8080/user/{id} #匹配后路由地址
 #          predicates: #断言，路径相匹配则进行路由
 #            - Path=/user/{id}
+  # kafka 配置
+  kafka:
+    bootstrap-servers: 127.0.0.1:9092
+    producer:
+      retries: 3
+    consumer:
+      auto-offset-reset: latest
+  # zipkin + sleuth
+  zipkin:
+    sender:
+      type: kafka
+    base-url: http://127.0.0.1:9401/
+
 
 # Nacos 配置中心，这个地方独立配置，是网关的数据，代码 GatewayConfig.java 中读取被监听
 nacos:
