--- a/e-commerce-nacos-client/src/main/resources/bootstrap.yml
+++ b/e-commerce-nacos-client/src/main/resources/bootstrap.yml
@@ -17,6 +17,24 @@ spring:
         metadata:
           management:
             context-path: ${server.servlet.context-path}/actuator
+  # kafka
+  kafka:
+    bootstrap-servers: 127.0.0.1:9092
+    producer:
+      retries: 3
+    consumer:
+      auto-offset-reset: latest
+  # zipkin + sleuth
+  sleuth:
+    sampler:
+      # ProbabilityBaseSampler 抽样策略
+      probability: 0.5 # 采样比列，0.5 表示 50%，默认是 0.1
+      # RateLimitingSampler 抽样策略，设置了限速采集，优先级更高
+      rate: 100 # 每秒间隔接受的 trace 量
+  zipkin:
+    sender:
+      type: kafka
+    base-url: http://127.0.0.1:9411/
 
 # 暴露端点
 management:
